Revises the landing page. Shifts some pages around again. [Fixes #255]

--- a/_scss/_uswds-theme-custom-styles.scss
+++ b/_scss/_uswds-theme-custom-styles.scss
@@ -27,133 +27,33 @@ i.e.
   }
 }
 
-.chp-home-hero {
-  $hero-min-height-sm: 400px;
-  $hero-min-height-lg: 500px;
-  background-color: #000;
-  background-repeat: no-repeat;
-  min-height: $hero-min-height-sm;
-  background-image: url(../img/hero--home-sm.png);
+.chp-home {
+  margin-top: units(4);
 
-  @include at-media(desktop) {
-    background-position: right;
-    background-image: url(../img/hero--home-lg.png);
-    min-height: $hero-min-height-lg;
+  &__row {
+    margin-bottom: units(5);
   }
 
-  &__mask {
-    width: 100%;
-    min-height: $hero-min-height-sm;
-    background: linear-gradient(to bottom, black, 60%, transparent);
-
-    @include at-media(desktop) {
-      min-height: $hero-min-height-lg;
-      background: linear-gradient(to right, black, 77%, transparent);
-    }
-  }
-
-  &__body {
+  &__diagram {
+    max-width: 550px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 64rem;
-  }
 
-  &__quote {
-    border: 0;
-    margin: 0;
-    padding: units(4);
-    color: color('white');
-    @include u-font-family('serif');
-    @include u-font-size('body', 'md');
-
-    @include at-media(desktop) {
-      @include u-font-size('body', '3xl');
-      padding: units(7) 16rem units(4) units(4);
+    @include at-media(tablet-lg) {
+      max-width: inherit;
     }
   }
 
-  &__quote-attribution {
-    display: block;
-    margin-top: units(1);
-    font-style: italic;
-    @include u-font-family('serif');
-    @include u-font-size('body', 'md');
-
-    @include at-media(desktop) {
-      text-align: right;
-      padding-right: 5rem;
-    }
-  }
-
-  &__title {
-    color: color('white');
-    margin: 0;
-    padding: units(2);
-
-    @include at-media(desktop) {
-      padding: units(6) units(4);
-    }
-  }
-
-  &__caption {
-    width: 100%;
-    padding: units(1) 0;
-    max-width: inherit;
-    background-color: color('white');
-    @include u-font-size('body', '2xs');
-  }
-}
-
-.chp-home {
-  &__lead {
-    @include u-font-family('serif');
-    @include u-font-size('body', 'md');
-  }
-}
-
-
-.chp-home-certs {
-  position: relative;
-  text-align: center;
-  @include u-padding-y(5);
-  width: 100%;
-
-  @include at-media('mobile-lg') {
-    @include grid-col(6);
-  }
-
-  &__stat {
-    @include u-font-size('body', '3xl');
-  }
-
-  &__desc {
-    @include u-font-size('body', 'lg');
-  }
-}
-
-.chp-home-certs::after {
-  content: "";
-  background-image: url(../img/solid/times.svg);
-  background-size: 35%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.3;
-}
-
-.chp-home {
   &__sub-title {
     @include u-font-size('body', 'sm');
     text-transform: uppercase;
     letter-spacing: .3em;
     font-weight: 400;
+  }
+
+  &__lead {
+    @include u-font-family('serif');
+    @include u-font-size('body', 'md');
   }
 }
 
@@ -212,7 +112,7 @@ i.e.
   &__body {
     flex: 1;
     min-width: 0;
-    @include u-font-size('body', 'lg');
+    @include u-font-size('body', 'md');
   }
 }
 
